connectivity/manifests/client-egress-to-echo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-to-echo
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-test
        kind: echo
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
    toEndpoints:
    - matchExpressions:
      - { key: 'k8s-app', operator: In, values: [ "kube-dns", "coredns", "node-local-dns" ] }
      - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "kube-system" ] }
    - matchLabels:
        io.kubernetes.pod.namespace: cluster-dns
        app: coredns
    - matchLabels:
        io.kubernetes.pod.namespace: cluster-dns-node-local
        app: node-local-dns
