connectivity/manifests/client-egress-to-entities-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-to-entities-world
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - toEndpoints:
    - matchExpressions:
      - { key: 'k8s-app', operator: In, values: [ "kube-dns", "coredns", "node-local-dns" ] }
      - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "kube-system" ] }
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  - toCIDR:
    - 169.254.20.10/32
